k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloud-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: cloud-app
  template:
    metadata:
      labels:
        app: cloud-app
    spec:
      containers:
        - name: cloud-app
          image: hendisantika/my-cloud-app:1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cloud-app-service
spec:
  selector:
    app: cloud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
