istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: cloud-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: cloud-app
spec:
  hosts:
    - "*"
  gateways:
    - cloud-app-gateway
  http:
    - match:
        - uri:
            prefix: /api
      route:
        - destination:
            host: cloud-app-service
            port:
              number: 80
